# awmrandr

./: .venv  Cargo.toml  devenv.nix
src/: awesome.rs  main.rs
