[package]
name = "awmrandr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-std = { version = "1.12.0", features = ["async-process", "attributes"] }
thiserror = "1.0.40"
zbus = "3.12.0"
